added animation to mobile background image

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         <span>Metal Text</span>
         <span>Metal Text</span>
     </h1>
+
+    <footer>
+        <p>
+            Shakex Sempe 2021
+        </p>
+    </footer>
 </body>
 </html>
